--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,28 +2,17 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <title>Page Title</title>
+    <title>Page Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <script src="./js/stickyNavbar.js" defer></script>
-    <script src="./js/currenLink.js" defer></script>
-    <script src="./js/touchmove.js" defer></script>
+    <link rel="stylesheet" href="/style.css" />
+    <!-- <script src="../js/stickyNavbar.js" defer></script> -->
   </head>
 
   <body>
     <div id="wrapper">
-      <header>
-        <h1>Cabinet d'avocats</h1>
-      </header>
-
-      <nav class="fixnavbar">
-        <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="expertise.html">Expertise</a></li>
-          <li><a href="honoraires.html">Honoraires</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+      <%- include('../partials/header.ejs') %> 
+      
+      <%- include('../partials/nav.ejs') %>
 
       <div class="gestZone">
         <section id="contact">
@@ -52,11 +41,8 @@
         <!-- /section contact -->
       </div>
       <!-- /gestZone-->
-      <footer>
-        <h4>Accueil</h4>
-        <h4>Plan du site</h4>
-        <h4>Mentions légales</h4>
-      </footer>
+
+      <%- include('../partials/footer.ejs') %>
     </div>
     <!-- /container -->
   </body>
