--- a/views/expertise.ejs
+++ b/views/expertise.ejs
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <title>sw | Expertise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <script src="./js/stickyNavbar.js" defer></script>
-    <script src="./js/currenLink.js" defer></script>
-    <script src="./js/touchmove.js" defer></script>
+    <link rel="stylesheet" href="/style.css" />
+    <!-- <script src="../js/stickyNavbar.js" defer></script> -->
   </head>
 
   <body>
@@ -16,14 +14,7 @@
         <h1>Cabinet d'avocats</h1>
       </header>
 
-      <nav class="fixnavbar">
-        <ul>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="expertise.html">Expertise</a></li>
-          <li><a href="honoraires.html">Honoraires</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+      <%- include('../partials/nav.ejs') %>
 
       <div class="gestZone">
         <article>
