navbar, css, image

--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -1,3 +1,16 @@
 <header>
-  <h1>Cabinet d'avocats</h1>
+  <div id="logo">
+    <img
+      class="img"
+      src="./img/logoIGD.svg"
+      id="logoIGD"
+      alt="logo"
+      width="30"
+      height="36"
+    />
+  </div>
+
+  <div id="firme">
+    <h1>Cabinet d'avocats</h1>
+  </div>
 </header>
